--- a/sass/layout/_solutions.scss
+++ b/sass/layout/_solutions.scss
@@ -1,7 +1,9 @@
 .solutions {
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 118px;
   padding-bottom: 118px;
-
+  height: 400px;
   background-color: $background-dark-theme;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -68,6 +70,10 @@
 
 @media screen and (min-width: 1200px) {
   .solutions {
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
