--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -116,6 +116,12 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .logo-web {
+    font-size: 26px;
+  }
+}
+
 .logo-studio-light-theme {
   color: #000000;
 }
