--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  /* max-width: 1600px; */
+  min-width: 320px;
 }
 
 .list {
@@ -302,9 +302,8 @@ img {
 }
 
 .modal-form-label-check {
-  display: flex;
-  align-items: center;
   margin-bottom: 30px;
+  vertical-align: bottom;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -318,6 +317,7 @@ img {
   display: inline-block;
   width: 16px;
   height: 15px;
+  vertical-align: bottom;
   border-radius: 2px;
   border: 2px solid #212121;
   margin-right: 7px;
