--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,16 @@ body {
   min-width: 320px;
 }
 
+main {
+  padding-top: 80px;
+}
+
+@media screen and (max-width: 767px) {
+  main {
+    padding-top: 60px;
+  }
+}
+
 .list {
   list-style: none;
 }
@@ -477,7 +487,13 @@ img {
 }
 
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 3;
+  background-color: #ffffff;
 }
 
 .border-portfolio {
@@ -541,6 +557,9 @@ img {
 }
 
 @media screen and (max-width: 767px) {
+  .header {
+    height: 60px;
+  }
   .menu-container {
     display: none;
     position: absolute;
@@ -550,7 +569,7 @@ img {
     padding-top: 40px;
     padding-bottom: 52px;
     width: 100%;
-    height: 400px;
+    height: 393px;
     background-color: #ffffff;
     border-top: 1px solid #ececec;
     text-align: center;
@@ -569,6 +588,9 @@ img {
     line-height: 1.16667;
     letter-spacing: 0.02em;
     color: #212121;
+  }
+  .header-contacts {
+    margin-top: 32px;
   }
   .header-contacts-link {
     display: inline-block;
