--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -10,6 +10,16 @@ body {
   min-width: 320px;
 }
 
+main {
+  padding-top: 80px;
+}
+
+@media screen and (max-width: 767px) {
+  main {
+    padding-top: 60px;
+  }
+}
+
 .list {
   list-style: none;
 }
@@ -192,7 +202,13 @@ img {
 }
 
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 3;
+  background-color: #ffffff;
 }
 
 .border-portfolio {
@@ -256,6 +272,9 @@ img {
 }
 
 @media screen and (max-width: 767px) {
+  .header {
+    height: 60px;
+  }
   .menu-container {
     display: none;
     position: absolute;
@@ -265,7 +284,7 @@ img {
     padding-top: 40px;
     padding-bottom: 52px;
     width: 100%;
-    height: 400px;
+    height: 393px;
     background-color: #ffffff;
     border-top: 1px solid #ececec;
     text-align: center;
@@ -284,6 +303,9 @@ img {
     line-height: 1.16667;
     letter-spacing: 0.02em;
     color: #212121;
+  }
+  .header-contacts {
+    margin-top: 32px;
   }
   .header-contacts-link {
     display: inline-block;
@@ -439,7 +461,6 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  /* padding: 63px 24px; */
   padding-left: 24px;
   padding-right: 24px;
   background-color: rgba(33, 150, 243, 0.9);
@@ -471,8 +492,8 @@ img {
   margin-bottom: 4px;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 17px;
-  line-height: 2.11765;
+  font-size: 18px;
+  line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
 }
@@ -515,6 +536,9 @@ img {
     display: flex;
     flex-wrap: wrap;
     margin-top: 30px;
+  }
+  .works-list-item {
+    width: 354px;
   }
   .works-list-item:nth-child(2n + 1) {
     margin-right: 30px;
