--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,11 @@
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 3;
+  background-color: $secondary-text-color-dark-theme;
 }
 
 .border-portfolio {
@@ -55,6 +61,9 @@
 }
 
 @media screen and (max-width: 767px) {
+  .header {
+    height: 60px;
+  }
   .menu-container {
     display: none;
     position: absolute;
@@ -64,7 +73,7 @@
     padding-top: 40px;
     padding-bottom: 52px;
     width: 100%;
-    height: 400px;
+    height: 393px;
     background-color: $secondary-text-color-dark-theme;
     border-top: 1px solid #ececec;
 
@@ -84,6 +93,7 @@
     }
   }
   .header-contacts {
+    margin-top: 32px;
     &-link {
       display: inline-block;
       padding-top: 8px;
